[gd_scene load_steps=13 format=3 uid="uid://cg655pq3741mb"]

[ext_resource type="Texture2D" uid="uid://cq50715kiqpb6" path="res://Sprites/Enemies/ToxicFrog_Sheet.png" id="1_a3g6j"]
[ext_resource type="Script" path="res://Scripts/toxic_frog.gd" id="1_q76vr"]

[sub_resource type="Animation" id="Animation_o3utc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3gc7u"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_u752s"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_w0fkf"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_38th1"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_7nh87"]
resource_name = "walk"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_invm1"]
_data = {
"RESET": SubResource("Animation_o3utc"),
"attack": SubResource("Animation_3gc7u"),
"death": SubResource("Animation_u752s"),
"hurt": SubResource("Animation_w0fkf"),
"idle": SubResource("Animation_38th1"),
"walk": SubResource("Animation_7nh87")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxw5d"]
size = Vector2(16.5982, 16.4478)

[sub_resource type="CircleShape2D" id="CircleShape2D_bqmiy"]
radius = 8.6092

[sub_resource type="CircleShape2D" id="CircleShape2D_jx5ev"]
radius = 8.77215

[node name="ToxicFrog" type="CharacterBody2D"]
scale = Vector2(0.79798, 0.79798)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_q76vr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a3g6j")
hframes = 9
vframes = 5

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_invm1")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.25316, 1.25316)
scale = Vector2(0.906002, 0.914282)
shape = SubResource("RectangleShape2D_xxw5d")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="FrogHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogHitBox"]
position = Vector2(0, 1.25316)
scale = Vector2(-0.873366, 0.923959)
shape = SubResource("CircleShape2D_bqmiy")
debug_color = Color(0.233418, 0.62964, 0.293414, 0.42)

[node name="FrogDealDamageArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogDealDamageArea"]
position = Vector2(0, 1.25316)
scale = Vector2(0.975273, 0.993792)
shape = SubResource("CircleShape2D_jx5ev")
debug_color = Color(0.662401, 0.51069, 0.144107, 0.42)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="FrogHitBox" to="." method="_on_frog_hit_box_area_entered"]
[connection signal="body_entered" from="FrogDealDamageArea" to="." method="_on_frog_deal_damage_area_body_entered"]
